--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ coroutinecore = "1.5.2"
 coroutineandroid = "1.7.3"
 lifecycleviewmodel = "2.2.0"
 fragmentKtx = "1.8.9"
+navversion = "2.9.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,8 +39,8 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutinecore" }
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutineandroid" }
 lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleviewmodel" }
-
-
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navversion" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navversion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
