--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ coroutineandroid = "1.7.3"
 lifecycleviewmodel = "2.2.0"
 fragmentKtx = "1.8.9"
 navversion = "2.9.7"
+adapterdelegates = "4.3.2"
+adapterdelegatesviewbinding = "4.3.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +43,8 @@ coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutin
 lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleviewmodel" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navversion" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navversion" }
+adapterdelegates4 = { group = "com.hannesdorfmann", name = "adapterdelegates4-kotlin-dsl", version.ref = "adapterdelegates" }
+adapterdelegates4-viewbinding = { group = "com.hannesdorfmann", name = "adapterdelegates4-kotlin-dsl-viewbinding", version.ref = "adapterdelegatesviewbinding" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
